fix whitespace on tooltips,ie7 bug in style

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ CSS for the gallery widget
     border-radius: 5px;
     -moz-border-radius: 5px;     
 }
+.gigx-slideshow a {
+   outline: 0;
+}
 
 .gigx-slideshow-wrapper {
   	margin: 0;  
@@ -168,8 +171,8 @@ overflow: hidden;
 	text-shadow: 0 0 2px #000;
 	padding: 4px 8px;
 	border: 1px solid rgba(255,255,255,0.25);
-	background-color: rgb(25,25,25);
-	background-color: rgba(25,25,25,0.92);
+	background: rgb(25,25,25);
+	background: rgba(25,25,25,0.92);
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(transparent), to(#000));
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
